--- a/frontend/src/scss/_testimonials.scss
+++ b/frontend/src/scss/_testimonials.scss
@@ -29,6 +29,7 @@
 .myCarousel {
   background: #fafafa;
   margin-top: -6%;
+  margin-bottom: 12vh;
   width: 54%;
   margin-left: auto;
   margin-right: auto;
@@ -37,7 +38,8 @@
   padding-left: 5%;
   padding-right: 5%;
   border: 1px solid #ddd;
-  height: 286px;
+  height: 55vh;
+
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
@@ -131,7 +133,7 @@
     padding-left: 5%;
     padding-right: 5%;
     border: 1px solid #ddd;
-    height: 269px;
+    height: 55vh;
   }
 
   .carousel .slide img {
