About page edited

--- a/frontend/src/scss/_aboutPage.scss
+++ b/frontend/src/scss/_aboutPage.scss
@@ -98,6 +98,15 @@
   font-family: $Mukta;
   color: $gray;
   padding: 2px 0px 2px 0px;
+  list-style: none;
+}
+
+.about-points-container ul li::before {
+  content: "\f059";
+  font-family: "FontAwesome";
+  float: left;
+  margin-left: -1.5em;
+  color: green;
 }
 
 .about-points2-container {
@@ -122,6 +131,15 @@
   font-family: $Mukta;
   color: $gray;
   padding: 2px 0px 2px 0px;
+  list-style: none;
+}
+
+.about-points2-container ul li::before {
+  content: "\f058";
+  font-family: "FontAwesome";
+  float: left;
+  margin-left: -1.5em;
+  color: green;
 }
 
 .about-points2-container h5 {
