--- a/frontend/src/scss/_plans.scss
+++ b/frontend/src/scss/_plans.scss
@@ -20,6 +20,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      padding: 0;
 
       & > h1 {
         font-family: "Lobster";
