--- a/frontend/src/scss/_settings.scss
+++ b/frontend/src/scss/_settings.scss
@@ -1,1 +1,130 @@
 @import "./config";
+
+.settings-container {
+  min-height: 80vh;
+  & > h1 {
+    font-family: $Mukta;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 5vh;
+    & > span{
+      background-color: $black;
+      color: $white;
+      border-radius: 6px;
+      padding: 0px 20px 0px 20px;
+    }
+  }
+  & > .row {
+    
+    min-height: 65vh;
+    & > .pp-container {
+      & > .pp-change-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        min-height: 100%;
+        & > label {
+          & > img {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 50%;
+            cursor: pointer;
+            box-shadow: rgba(83, 83, 83, 0.25) 0px 13px 27px -5px,
+              rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            transition: all 0.3s ease-in-out;
+          }
+          & > img:hover {
+            filter: brightness(0.7);
+          }
+        }
+
+        & > .pp-info-container {
+          padding: 20px;
+          & > h3 {
+            font-family: $Mukta;
+            font-weight: 700;
+          }
+          & > p {
+            font-family: $Mukta;
+            color: $gray;
+          }
+        }
+      }
+    }
+    & > .settings-form-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      & > .settings-form {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        flex-direction: column;
+        & > label {
+          font-family: $Mukta;
+          padding-top: 5vh;
+          width: 100%;
+        }
+        & > input {
+          border: none;
+          border-bottom: 1px solid $gray;
+          width: 100%;
+        }
+        & > input:focus {
+          outline: none;
+        }
+        & > button {
+          margin-top: 40px;
+          border: none;
+          width: 20%;
+          border-radius: 6px;
+          font-family: $Mukta;
+          font-size: 16px;
+          font-weight: 500;
+          background-color: $black;
+          color: $white;
+          padding: 8px 20px 8px 20px;
+          transition: all 0.3s ease-in-out;
+        }
+
+        & > button:hover {
+          background-color: $darkGray;
+        }
+
+        & > span{
+          background-color: rgb(204, 0, 0);
+          color: $white;
+          padding: 10px 40px 10px 40px;
+          margin-top: 10px;
+          border-radius: 6px;
+          font-family: $Mukta;
+          font-size: 16px;
+          font-weight: 500;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1244px) {
+  .settings-container {
+    & > h1{
+      display: none;
+    }
+    &>.row {
+      margin-top: 10vh;
+      &>.settings-form-container {
+        &>.settings-form {
+          padding: 30px;
+        }
+      }
+    }
+  }
+}
