About changes done

--- a/frontend/src/scss/_aboutPage.scss
+++ b/frontend/src/scss/_aboutPage.scss
@@ -167,6 +167,27 @@
   transition: all 0.3s ease-in-out;
 }
 
+.content{
+  & > ul{
+    
+    padding: 5px 15px 5px 40px;
+    & > li{
+      font-family: $Mukta;
+      color: $gray;
+      padding: 2px 0px 2px 0px;
+      list-style: none;
+      
+    }
+    & > li:before{
+      content: "\f058";
+      font-family: "FontAwesome";
+      float: left;
+      margin-left: -1.5em;
+      color: green;
+    }
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   .rp-container {
     padding: 40px 20px 40px 20px;
