--- a/frontend/src/scss/_enquiry.scss
+++ b/frontend/src/scss/_enquiry.scss
@@ -23,7 +23,15 @@
 .dropdown-container {
   padding: 5px 24px;
 }
-.message-input {
-  box-shadow: none !important;
-  color: $black !important;
+.e-message-container{
+  padding: 5px 24px;
+ & > .e-message-input {
+  width: 100%;
+  height: 20vh;
+  padding: 5px;
+  border-radius: 6px;
+  color: $black ;
+
 }
+}
+
