Login FrontEnd done

--- a/frontend/src/scss/_config.scss
+++ b/frontend/src/scss/_config.scss
@@ -19,6 +19,7 @@ $gray: gray;
 $scrollbar: rgb(49, 49, 49);
 $grayHover: rgb(0, 0, 0);
 $darkGray: rgb(75, 75, 75);
+$lightgray:rgb(163, 163, 163);
 $veryLightGray: rgb(228, 228, 228);
 $copyrightgray: rgb(29, 29, 29);
 $purpleAccent: #836da0;
