--- a/frontend/src/scss/_register.scss
+++ b/frontend/src/scss/_register.scss
@@ -1,6 +1,6 @@
 @import "./config";
 
-.login-page{
+.register-page{
     & > :first-child{
         position: relative;
         height: 100vh;
@@ -49,7 +49,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        & > .login-card{
+        & > .register-card{
             box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
             display: flex;
             justify-content: center;
@@ -57,7 +57,7 @@
             flex-direction: column;
             padding: 10vh;
             width: 60%;
-            height: 70vh;
+            height: 80vh;
             & > h3{
                 font-family: $Mukta;
                 text-transform: capitalize;
@@ -78,6 +78,7 @@
                   border: none;
                   border-bottom: 1px solid $gray;
                   padding: 5px 5px 10px 5px;
+                
                   
                 }
 
@@ -90,9 +91,17 @@
                     background-size: 20px;   
                 }
                 & > :nth-child(4){
+                    background: url(../images/email.png) no-repeat scroll 7px 10px;
+                    padding-left:40px;
+                    background-size: 20px;   
+                }
+
+
+                & > :nth-child(6){
                     background: url(../images/password.png) no-repeat scroll 7px 10px;
                     padding-left:40px;
-                    background-size: 20px;     
+                    
+                    background-size: 20px;   
                 }
 
                 & > i{
@@ -113,7 +122,7 @@
 
 
             }
-            & > .login-socials{
+            & > .register-socials{
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -201,17 +210,18 @@
 }
 
 @media only screen and (max-width: 1244px){
-.login-page{
-    & > :first-child{
-        justify-content: center;
-        text-align: center;
-    }
+.register-page{
+   
+        & > :first-child{
+            justify-content: center;
+            text-align: center;
+        }
     & > :last-child{
         
-        & > .login-card{
+        & > .register-card{
             padding: 10vh;
             width: 100%;
-            height: 80vh;
+            height: 90vh;
         }
     }
  }
